--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
         android:layout_height="fill_parent"
         android:scrollbars="vertical">
 
-        <LinearLayout
+        <dev.jahidhasanco.seatbookview.SeatBookView
             android:id="@+id/layoutSeat"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
 
     </ScrollView>
 
