--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:seat_size_by_seats_column="9"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            app:available_seat_background="@mipmap/ic_launcher"
+            />
 
     </ScrollView>
 
