--- a/SeatBookView/src/main/res/values/attrs.xml
+++ b/SeatBookView/src/main/res/values/attrs.xml
@@ -8,7 +8,7 @@
         <attr name="reserved_seats_text_color" format="color"/>
         <attr name="booked_seats_text_color" format="color"/>
         <attr name="available_seats_text_color" format="color"/>
-        <attr name="seat_size" format="integer"/>
+        <attr name="seat_size" format="dimension"/>
         <attr name="seat_size_by_seats_column" format="integer"/>
     </declare-styleable>
 </resources>
