--- a/SeatBookView/src/main/res/drawable/seats_book.xml
+++ b/SeatBookView/src/main/res/drawable/seats_book.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#15B76D"
+    >
+    <item >
+        <shape android:shape="rectangle">
+            <solid android:color="#E5E5E5" />
+            <corners android:radius="20dp" />
+        </shape>
+    </item>
 
-    <solid android:color="#808080"/>
-    <corners android:radius="20dp"/>
-
-</shape>
+</ripple>
