--- a/SeatBookView/src/main/res/values/attrs.xml
+++ b/SeatBookView/src/main/res/values/attrs.xml
@@ -9,6 +9,7 @@
         <attr name="booked_seats_text_color" format="color"/>
         <attr name="available_seats_text_color" format="color"/>
         <attr name="seat_size" format="dimension"/>
+        <attr name="seat_text_size" format="dimension"/>
         <attr name="seat_size_by_seats_column" format="integer"/>
     </declare-styleable>
 </resources>
