--- a/SeatBookView/src/main/res/layout/layout_view_group.xml
+++ b/SeatBookView/src/main/res/layout/layout_view_group.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     android:id="@+id/layout_viewGroup"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
